inserimento elementi nella sidebar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-11 col-md-10">
-                                <input type="search" name="" class="w-100" placeholder="&#xF002; Search" style="font-family:Arial, FontAwesome">
+                                <input type="search" name="" class="w-100" placeholder="&#xF002; Prova a cercare: lezioni di Laravel" style="font-family:Arial, FontAwesome">
                             </div>
                             <div class="col-1 col-md-2 d-flex justify-content-around">
                                 <div class="w-20 d-none d-md-block me-2">
@@ -46,25 +46,43 @@
             <div class="sidebar-main d-flex">
                 <div class="sidebar">
                     <div class="large-sidebar">
-                        <div class="sidebar-text">
-                            testo
-                        </div>
-                        <div class="sidebar-text">
-                            testo
-                        </div>
-                        <div class="sidebar-text">
-                            testo
+                        <div class="row flex-column justify-content-between h-100">
+                            <div class="col text-center">
+                                <div class="sidebar-text mt-2">
+                                    <i class="fa-solid fa-house"></i> Home
+                                </div>
+                                <div class="sidebar-text mt-2">
+                                    <i class="fa-solid fa-bars-staggered"></i> Stats
+                                </div>
+                                <div class="sidebar-text mt-2">
+                                    <i class="fa-solid fa-signal"></i> Signals
+                                </div>
+                            </div>
+                            <div class="col align-items-end d-flex justify-content-center">
+                                <div class="sidebar-text">
+                                    <i class="fa-solid fa-gear"></i> Admin
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="small-sidebar">
-                        <div class="sidebar-ico">
-                            ico
-                        </div>
-                        <div class="sidebar-ico">
-                            ico
-                        </div>
-                        <div class="sidebar-ico">
-                            ico
+                        <div class="row flex-column justify-content-between h-100">
+                            <div class="col text-center">
+                                <div class="sidebar-ico mt-2">
+                                    <i class="fa-solid fa-house"></i>
+                                </div>
+                                <div class="sidebar-ico mt-2">
+                                    <i class="fa-solid fa-bars-staggered"></i>
+                                </div>
+                                <div class="sidebar-ico mt-2">
+                                    <i class="fa-solid fa-signal"></i>
+                                </div>
+                            </div>
+                            <div class="col align-items-end d-flex justify-content-center">
+                                <div class="sidebar-ico">
+                                    <i class="fa-solid fa-gear"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
