inserimento contenuti nel body-content

--- a/index.html
+++ b/index.html
@@ -101,73 +101,108 @@
                         </div>
                         <div class="row">
                             <div class="col-12 col-md-8">
-                                <div class="card">
-                                    <h2>Titolo Tabella</h2>
+                                <div class="card mt-4">
+                                    <div class="card-header">
+                                        <h2>Prossime classi</h2>
+                                    </div>
                                     <table class="table">
                                         <thead>
                                           <tr>
-                                            <th scope="col">n</th>
-                                            <th scope="col">n</th>
-                                            <th scope="col">n</th>
-                                            <th scope="col">n</th>
-                                            <th scope="col">n</th>
+                                            <th scope="col">Nome</th>
+                                            <th scope="col"><div class="d-none d-sm-block">Data inizio</div></th>
+                                            <th scope="col"><div class="d-none d-sm-block">ROI</div></th>
+                                            <th scope="col">Stato</th>
+                                            <th scope="col">Azioni</th>
                                           </tr>
                                         </thead>
                                         <tbody>
                                           <tr>
-                                            <th scope="row">1</th>
-                                            <td>Mark</td>
-                                            <td>Otto</td>
-                                            <td>@mdo</td>
-                                            <td>@mdo</td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
+                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <td><div class="d-none d-sm-block">20%</div></td>
+                                            <td class="text-center text-white"><span class="bg-success ps-1 pe-1 rounded-1">Done</span></td>
+                                            <td>
+                                                <i class="fa-solid fa-pencil tabel-icon"></i>
+                                                <i class="fa-solid fa-trash tabel-icon"></i>
+                                            </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row">2</th>
-                                            <td>Jacob</td>
-                                            <td>Thornton</td>
-                                            <td>@fat</td>
-                                            <td>@mdo</td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
+                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <td><div class="d-none d-sm-block">20%</div></td>
+                                            <td class="text-center text-white"><span class="bg-success ps-1 pe-1 rounded-1">Done</span></td>
+                                            <td>
+                                                <i class="fa-solid fa-pencil tabel-icon"></i>
+                                                <i class="fa-solid fa-trash tabel-icon"></i>
+                                            </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row">3</th>
-                                            <td>Larry the Bird</td>
-                                            <td>@twitter</td>
-                                            <td>@mdo</td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
+                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <td><div class="d-none d-sm-block">20%</div></td>
+                                            <td class="text-center text-white"><span class="bg-warning ps-1 pe-1 rounded-1">process</span></td>
+                                            <td>
+                                                <i class="fa-solid fa-pencil tabel-icon"></i>
+                                                <i class="fa-solid fa-trash tabel-icon"></i>
+                                            </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row">3</th>
-                                            <td>Larry the Bird</td>
-                                            <td>@twitter</td>
-                                            <td>@mdo</td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
+                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <td><div class="d-none d-sm-block">20%</div></td>
+                                            <td class="text-center text-white"><span class="bg-success ps-1 pe-1 rounded-1">Done</span></td>
+                                            <td>
+                                                <i class="fa-solid fa-pencil tabel-icon"></i>
+                                                <i class="fa-solid fa-trash tabel-icon"></i>
+                                            </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row">3</th>
-                                            <td>Larry the Bird</td>
-                                            <td>@twitter</td>
-                                            <td>@mdo</td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
+                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <td><div class="d-none d-sm-block">20%</div></td>
+                                            <td class="text-center text-white"><span class="bg-danger ps-1 pe-1 rounded-1">failed</span></td>
+                                            <td>
+                                                <i class="fa-solid fa-pencil tabel-icon"></i>
+                                                <i class="fa-solid fa-trash tabel-icon"></i>
+                                            </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row">3</th>
-                                            <td>Larry the Bird</td>
-                                            <td>@twitter</td>
-                                            <td>@mdo</td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
+                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <td><div class="d-none d-sm-block">20%</div></td>
+                                            <td class="text-center text-white"><span class="bg-success ps-1 pe-1 rounded-1">Done</span></td>
+                                            <td>
+                                                <i class="fa-solid fa-pencil tabel-icon"></i>
+                                                <i class="fa-solid fa-trash tabel-icon"></i>
+                                            </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row">3</th>
-                                            <td>Larry the Bird</td>
-                                            <td>@twitter</td>
-                                            <td>@mdo</td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
+                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <td><div class="d-none d-sm-block">20%</div></td>
+                                            <td class="text-center text-white"><span class="bg-danger ps-1 pe-1 rounded-1">failed</span></td>
+                                            <td>
+                                                <i class="fa-solid fa-pencil tabel-icon"></i>
+                                                <i class="fa-solid fa-trash tabel-icon"></i>
+                                            </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row">3</th>
-                                            <td>Larry the Bird</td>
-                                            <td>@twitter</td>
-                                            <td>@mdo</td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
+                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <td><div class="d-none d-sm-block">20%</div></td>
+                                            <td class="text-center text-white"><span class="bg-success ps-1 pe-1 rounded-1">Done</span></td>
+                                            <td>
+                                                <i class="fa-solid fa-pencil tabel-icon"></i>
+                                                <i class="fa-solid fa-trash tabel-icon"></i>
+                                            </td>
                                           </tr>
                                         </tbody>
                                       </table>
                                 </div>
-                                <div class="card">
+                                <div class="card mt-4">
+                                    <div class="card-header">
+                                        <h2>F.A.Q.</h2>
+                                    </div>
                                     <div class="accordion accordion-flush" id="accordionFlushExample">
                                         <div class="accordion-item">
                                           <h2 class="accordion-header" id="flush-headingOne">
@@ -203,34 +238,41 @@
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
-                                <div class="card">
-                                    <div class="input-group">
+                                <div class="card mt-4">
+                                    <div class="card-header">
+                                        <h2>Todo</h2>
+                                    </div>
+                                    <div class="input-group mt-2 ms-2 me-2">
                                         <div class="input-group-text">
                                           <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
                                         </div>
-                                        <div class="checkbox-title">
+                                        <div class="checkbox-title ms-2">
                                             testo checkbox
                                         </div>
                                     </div>
-                                    <div class="input-group">
+                                    <div class="input-group me-2 ms-2">
                                         <div class="input-group-text">
                                           <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
                                         </div>
-                                        <div class="checkbox-title">
+                                        <div class="checkbox-title ms-2">
                                             testo checkbox
                                         </div>
                                     </div> 
-                                    <div class="input-group">
+                                    <div class="input-group mb-2 me-2 ms-2">
                                         <div class="input-group-text">
                                           <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
                                         </div>
-                                        <div class="checkbox-title">
+                                        <div class="checkbox-title ms-2">
                                             testo checkbox
                                         </div>
                                     </div>                                       
                                 </div>
-                                <div class="card">
-                                    <img src="./img/stats.jpeg" class="card-img-top" alt="...">
+                                <div class="card mt-4">
+                                    <div class="card-header">
+                                        <img src="./img/stats.jpeg" class="card-img-top" alt="...">
+                                        <h5>Utenti attivi</h5>
+                                        <p>Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                                    </div>
                                     <div class="card-body">
                                       <h5 class="card-title">Card title</h5>
                                     </div>
@@ -238,7 +280,7 @@
                                         <li class="list-group-item">An item</li>
                                         <li class="list-group-item">A second item</li>
                                         <li class="list-group-item">A third item</li>
-                                        <li class="list-group-item">A third item</li>
+                                        <li class="list-group-item"><a href="">A fourth item</a></li>
                                     </ul>
                                 </div>
                             </div>
