--- a/index.html
+++ b/index.html
@@ -88,15 +88,30 @@
                 </div>
                 <div class="body-content">
                     <div class="container-fluid">
-                        <div class="row bg-success">
-                            <div class="col-4 order-sm-3">
-                                contenuto topbar 1
+                        <div class="row bg-primary flex-column flex-sm-row">
+                            <div class="col-12 col-sm-4 order-sm-3 text-white">
+                                Nuovo studente <i class="fa-sharp fa-solid fa-plus topbar-icon"></i>
                             </div>
-                            <div class="col-4 order-sm-1">
-                                contenuto topbar 2
+                            <div class="col-12 col-sm-4 order-sm-1 text-white">
+                                <div>
+                                    Boolean <span class="blue-bg">Piano blaze</span>
+                                </div>
+                                <div>
+                                    <span class="blue-bg">3 app</span>
+                                    <i class="fa-solid fa-angles-right"></i>
+                                    <span class="blue-bg d-md-none"><i class="fa-sharp fa-solid fa-plus"></i></span>
+                                    <span class="blue-bg d-none d-md-inline-block">Boolean mobile app</span>
+                                    <span class="blue-bg d-none d-md-inline-block">Boolean web app</span>
+                                    <span class="blue-bg d-none d-md-inline-block">Boolean blog app</span>
+                                </div>
                             </div>
-                            <div class="col-4 order-sm-2">
-                                contenuto topbar 3
+                            <div class="col-12 col-sm-4 order-sm-2 text-white">
+                                <div>
+                                    Studenti online negli ultimi 30 minuti
+                                </div>
+                                <div>
+                                    125
+                                </div>
                             </div>
                         </div>
                         <div class="row">
@@ -117,7 +132,7 @@
                                         </thead>
                                         <tbody>
                                           <tr>
-                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 75</th>
                                             <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
                                             <td><div class="d-none d-sm-block">20%</div></td>
                                             <td class="text-center text-white"><span class="bg-success ps-1 pe-1 rounded-1">Done</span></td>
@@ -127,8 +142,8 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
-                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 76</th>
+                                            <td><div class="d-none d-sm-block">16 Feb 2021</div></td>
                                             <td><div class="d-none d-sm-block">20%</div></td>
                                             <td class="text-center text-white"><span class="bg-success ps-1 pe-1 rounded-1">Done</span></td>
                                             <td>
@@ -137,8 +152,8 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
-                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 77</th>
+                                            <td><div class="d-none d-sm-block">17 Feb 2021</div></td>
                                             <td><div class="d-none d-sm-block">20%</div></td>
                                             <td class="text-center text-white"><span class="bg-warning ps-1 pe-1 rounded-1">process</span></td>
                                             <td>
@@ -147,8 +162,8 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
-                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 78</th>
+                                            <td><div class="d-none d-sm-block">18 Feb 2021</div></td>
                                             <td><div class="d-none d-sm-block">20%</div></td>
                                             <td class="text-center text-white"><span class="bg-success ps-1 pe-1 rounded-1">Done</span></td>
                                             <td>
@@ -157,8 +172,8 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
-                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 79</th>
+                                            <td><div class="d-none d-sm-block">19 Feb 2021</div></td>
                                             <td><div class="d-none d-sm-block">20%</div></td>
                                             <td class="text-center text-white"><span class="bg-danger ps-1 pe-1 rounded-1">failed</span></td>
                                             <td>
@@ -167,8 +182,8 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
-                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 80</th>
+                                            <td><div class="d-none d-sm-block">20 Feb 2021</div></td>
                                             <td><div class="d-none d-sm-block">20%</div></td>
                                             <td class="text-center text-white"><span class="bg-success ps-1 pe-1 rounded-1">Done</span></td>
                                             <td>
@@ -177,8 +192,8 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
-                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 81</th>
+                                            <td><div class="d-none d-sm-block">21 Feb 2021</div></td>
                                             <td><div class="d-none d-sm-block">20%</div></td>
                                             <td class="text-center text-white"><span class="bg-danger ps-1 pe-1 rounded-1">failed</span></td>
                                             <td>
@@ -187,8 +202,8 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 7</th>
-                                            <td><div class="d-none d-sm-block">15 Feb 2021</div></td>
+                                            <th scope="row"><i class="fa-solid fa-code m-1 me-2"></i>Classe 82</th>
+                                            <td><div class="d-none d-sm-block">22 Feb 2021</div></td>
                                             <td><div class="d-none d-sm-block">20%</div></td>
                                             <td class="text-center text-white"><span class="bg-success ps-1 pe-1 rounded-1">Done</span></td>
                                             <td>
@@ -207,7 +222,7 @@
                                         <div class="accordion-item">
                                           <h2 class="accordion-header" id="flush-headingOne">
                                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                              Accordion Item #1
+                                              Come aggiungere un nuovo studente?
                                             </button>
                                           </h2>
                                           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -217,7 +232,7 @@
                                         <div class="accordion-item">
                                           <h2 class="accordion-header" id="flush-headingTwo">
                                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                              Accordion Item #2
+                                              ome posso accedere alle informazioni sul mio account?
                                             </button>
                                           </h2>
                                           <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
@@ -227,7 +242,7 @@
                                         <div class="accordion-item">
                                           <h2 class="accordion-header" id="flush-headingThree">
                                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                              Accordion Item #3
+                                              Posso usare questa dashboard da mobile?
                                             </button>
                                           </h2>
                                           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
